overrides: fix gtk_container_child_set_property() for NULL values

Install a GTK override with a fix for
gtk_container_chilld_set_property() not using the correct GType for NULL
values.

https://bugzilla.gnome.org/show_bug.cgi?id=721838