modules/overrides/Gtk.js
@@ -1,0 +1,10 @@
+var GjsPrivate = imports.gi.GjsPrivate;
+var Gtk;
+
+function _init() {
+    Gtk = this;
+
+    Gtk.Container.prototype.child_set_property = function(child, property, value) {
+        GjsPrivate.gtk_container_child_set_property(this, child, property, value);
+    };
+}
